<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_gitsawe"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_gitsawe_short"
        android:shortcutLongLabel="@string/shortcut_gitsawe_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.agpeya.app"
            android:targetClass="com.agpeya.app.MainActivity">
            <extra android:name="route" android:value="gitsawe" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_sinksar"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_sinksar_short"
        android:shortcutLongLabel="@string/shortcut_sinksar_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.agpeya.app"
            android:targetClass="com.agpeya.app.MainActivity">
            <extra android:name="route" android:value="sinksar" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_psalter"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_psalter_short"
        android:shortcutLongLabel="@string/shortcut_psalter_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.agpeya.app"
            android:targetClass="com.agpeya.app.MainActivity">
            <extra android:name="route" android:value="psalter" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_confession"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_confession_short"
        android:shortcutLongLabel="@string/shortcut_confession_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.agpeya.app"
            android:targetClass="com.agpeya.app.MainActivity">
            <extra android:name="route" android:value="confessionPrep" />
        </intent>
    </shortcut>
</shortcuts>
